<resources>
    <string name="app_name">Sejarah Ngaliyan</string>
    <string name="name_kel">nama kelurahan</string>
    <string name="description_kel_1">Deskripsi Kelurahan Satu</string>
    <string name="foto_kel">Foto Kelurahan</string>
    <string name="foto_kelurahan">Foto Kelurahan</string>
    <string name="nama_kelurahan">Nama Kelurahan</string>
    <string name="deskripsi_kelurahan">Deskripsi Kelurahan</string>
    <string name="deskripsi_kelurahan_satu">Deskripsi Kelurahan</string>
    <string name="nama_kelurahan_satu">Nama Kelurahan</string>
    <string name="foto_kelurahan_detail">Foto Kelurahan Detail</string>
    <string name="foto_splashscreen_satu">Foto Splashscreen Satu</string>
    <string name="kecamatan_ngaliyan">KECAMATAN NGALIYAN</string>
    <string name="foto_splashscreen_dua">Foto Splashscreen Dua</string>
    <string name="about">Tentang</string>
    <string-array name="data_name">
        <item>
            Bambankerep
        </item>
        <item>
            Bringin
        </item>
        <item>
            Gondoriyo
        </item>
        <item>
            Kalipancur
        </item>
        <item>
            Ngaliyan
        </item>
        <item>
            Podorejo
        </item>
        <item>
            Purwoyoso
        </item>
        <item>
            Tambakaji
        </item>
        <item>
            Wates
        </item>
        <item>
            Wonosari
        </item>
    </string-array>

    <string-array name="data_description">
        <item>
            As the Avengers and their allies have continued to protect the world from threats too large for any one
            hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy,
            his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his
            twisted will on all of reality. Everything the Avengers have fought for has led up to this moment the fate
            of Earth and existence itself has never been more uncertain.
        </item>
        <item>
            In the near future, a ship of space explorers crash land on an unknown planet. Theyr e soon met with some
            of their worst fears as they discover the planet is inhabited by monstrous dinosaurs.
        </item>
        <item>
            Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the
            power hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people
            and then the surface world. Standing in his way is Arthur Curry, Orms half human, half Atlantean brother
            and true heir to the throne.
        </item>
        <item>
            Miles Morales is juggling his life between being a high school student and being a spiderman. When Wilson
            Kingpin Fisk uses a super collider, others from across the Spider Verse are transported to this dimension.
        </item>
        <item>
            Three years after the demise of Jurassic World, a volcanic eruption threatens the remaining dinosaurs on
            the isla Nublar, so Claire Dearing, the former park manager, recruits Owen Grady to help prevent the
            extinction of the dinosaurs once again.
        </item>
        <item>
            Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the
            host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to
            protect the world from a shadowy organization looking for a symbiote of their own.
        </item>
        <item>
            Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the
            World Wide Web in search of a replacement part to save Vanellopes video game, Sugar Rush. In way over
            their heads, Ralph and Vanellope rely on the citizens of the internet the netizens to help navigate
            their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of
            trend-making site BuzzzTube.
        </item>
        <item>
            King TChalla returns home from America to the reclusive, technologically advanced African nation of
            Wakanda to serve as his country new leader. However, TChalla soon finds that he is challenged for the
            throne by factions within his own country as well as without. Using powers reserved to Wakandan kings,
            TChalla assumes the Black Panther mantel to join with girlfriend Nakia, the queenmother, his princesskid
            sister, members of the Dora Milaje (the Wakandan special forces) and an American secret agent, to prevent
            Wakanda from being dragged into a world war.
        </item>
        <item>
            Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the
            music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics.
            When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest
            challenge yet – finding a way to keep the band together amid the success and excess.
        </item>
        <item>
            When an IMF mission ends badly, the world is faced with dire consequences. As Ethan Hunt takes it upon
            himself to fulfill his original briefing, the CIA begin to question his loyalty and his motives. The IMF
            team find themselves in a race against time, hunted by assassins while trying to prevent a global
            catastrophe.
        </item>
    </string-array>

    <string-array name="data_photo">
        <item>https://image.tmdb.org/t/p/w185_and_h278_bestv2/7WsyChQLEftFiDOVTGkv3hFpyyt.jpg</item>
        <item>https://image.tmdb.org/t/p/w185_and_h278_bestv2/uo7u2bRW6KPPe4ipTUqx5RZ9rwC.jpg</item>
        <item>https://image.tmdb.org/t/p/w185_and_h278_bestv2/5Kg76ldv7VxeX9YlcQXiowHgdX6.jpg</item>
        <item>https://image.tmdb.org/t/p/w185_and_h278_bestv2/iiZZdoQBEYBv6id8su7ImL0oCbD.jpg</item>
        <item>https://image.tmdb.org/t/p/w185_and_h278_bestv2/c9XxwwhPHdaImA2f1WEfEsbhaFB.jpg</item>
        <item>https://image.tmdb.org/t/p/w185_and_h278_bestv2/2uNW4WbgBXL25BAbXGLnLqX71Sw.jpg</item>
        <item>https://image.tmdb.org/t/p/w185_and_h278_bestv2/qEnH5meR381iMpmCumAIMswcQw2.jpg</item>
        <item>https://image.tmdb.org/t/p/w185_and_h278_bestv2/uxzzxijgPIY7slzFvMotPv8wjKA.jpg</item>
        <item>https://image.tmdb.org/t/p/w185_and_h278_bestv2/lHu1wtNaczFPGFDTrjCSzeLPTKN.jpg</item>
        <item>https://image.tmdb.org/t/p/w185_and_h278_bestv2/AkJQpZp9WoNdj7pLYSj1L0RcMMN.jpg</item>
    </string-array>
</resources>
