<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/iv_foto_detail"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/foto_kelurahan_detail" />
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="2dp"
        android:background="#000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_kelurahan"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000"/>
    <TextView
        android:id="@+id/tv_nama_makanan"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/nama_kelurahan_satu"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi_kelurahan"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000"/>
    <TextView
        android:id="@+id/tv_detail_makanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/deskripsi_kelurahan_satu"/>

</LinearLayout>