<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".SplashScreen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/foto_splashscreen_satu"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginEnd="20dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/foto_splashscreen_dua"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginStart="20dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:text="@string/kecamatan_ngaliyan" />
    </LinearLayout>

</RelativeLayout>